deploy/k8s/overlays/prod/ingress_grpc_patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: triton-grpc
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - triton-grpc.example.com
      secretName: triton-tls-secret
