deploy/k8s/overlays/prod/ingress_http_patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: triton-http
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - triton.example.com
      secretName: triton-tls-secret
